php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #61264 xmlrpc_parse_method_descriptions leaks temporary variable
Submitted: 2012-03-03 12:37 UTC Modified: 2012-03-03 12:46 UTC
From: nikic@php.net Assigned: nikic (profile)
Status: Closed Package: XMLRPC-EPI related
PHP Version: Irrelevant OS:
Private report: No CVE-ID: None
 [2012-03-03 12:37 UTC] nikic@php.net
Description:
------------
<?php

$xml = <<<XML
<?xml version="1.0" encoding="utf-8"?>
<a>
 <b>foo</b>
</a>
XML;
var_dump(xmlrpc_parse_method_descriptions($xml));

Leaks, because the retval (http://lxr.php.net/xref/PHP_TRUNK/ext/xmlrpc/xmlrpc-epi-php.c#1240) is not dtor'd.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-03-03 12:46 UTC] nikic@php.net
Automatic comment from SVN on behalf of nikic
Revision: http://svn.php.net/viewvc/?view=revision&amp;revision=323850
Log: Fix bug #61264: xmlrpc_parse_method_descriptions leaks temporary variable
 [2012-03-03 12:46 UTC] nikic@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: nikic
 [2012-03-03 12:46 UTC] nikic@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-18 09:45 UTC] laruence@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5b4adeae9b892dca35a33fb54a0e9de69bd2f913
Log: Fix bug #61264: xmlrpc_parse_method_descriptions leaks temporary variable
 [2012-07-24 23:36 UTC] rasmus@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5b4adeae9b892dca35a33fb54a0e9de69bd2f913
Log: Fix bug #61264: xmlrpc_parse_method_descriptions leaks temporary variable
 [2013-11-17 09:33 UTC] laruence@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=5b4adeae9b892dca35a33fb54a0e9de69bd2f913
Log: Fix bug #61264: xmlrpc_parse_method_descriptions leaks temporary variable
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC