Fix bug #61264: xmlrpc_parse_method_descriptions leaks temporary variable